--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   webkitgtk-1.10.0.tar.xz: 5e022110cef5ff87a4c55ff0358dedd596502a84
-sources:
   webkitgtk-1.10.2.tar.xz: 733ca23157eb8dd072d57becf325799c00bde630
+sources:
+  webkitgtk-2.0.0.tar.xz: dd216769fec6039b9471ca57fcef70b9e8603892
