--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   webkitgtk-2.4.4.tar.xz: 0f7690bbaef69946c64793c8aa23cd2f00eac9ae
+sources:
+  webkitgtk-2.4.5.tar.xz: a0084746de2cf18246d7b5216086db8133c9df4b
