--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   webkitgtk-2.4.8.tar.xz: 44c6bbe52108297126830525619c1df047886a6f
+sources:
+  webkitgtk-2.4.9.tar.xz: fbe02db8a4f01a70e7cdf0d16f8a18463e18b104
